--- a/RZCollectionList-Demo/RZCollectionList-Demo/Classes/ViewControllers/SortedListViewController.xib
+++ b/RZCollectionList-Demo/RZCollectionList-Demo/Classes/ViewControllers/SortedListViewController.xib
@@ -31,7 +31,7 @@
                     </connections>
                 </segmentedControl>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="8">
-                    <rect key="frame" x="0.0" y="28" width="320" height="540"/>
+                    <rect key="frame" x="0.0" y="29" width="320" height="539"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
@@ -44,7 +44,7 @@
                 <constraint firstItem="8" firstAttribute="trailing" secondItem="1" secondAttribute="trailing" id="16"/>
                 <constraint firstItem="4" firstAttribute="trailing" secondItem="1" secondAttribute="trailing" id="18"/>
                 <constraint firstItem="4" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="19"/>
-                <constraint firstItem="8" firstAttribute="top" secondItem="4" secondAttribute="bottom" id="23"/>
+                <constraint firstItem="8" firstAttribute="top" secondItem="4" secondAttribute="bottom" constant="1" id="23"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
